# supervisor-workers-agent

./: .dockerignore  .env.example  AGENT-INFO.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  main.py
app/agent/: graph.py  models.py  policy.py  supervisor.py
app/agent/workers/: classify_intent.py  confirm_details.py  decide_action.py  email.py  finalize.py  order_lookup.py  policy_check.py  process_refund.py  process_return.py  show_order_status.py  slot_filler.py
app/core/: __init__.py  auth.py  config.py  database.py
app/fixtures/: README.md  __init__.py  orders.py
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  api.py  auth.py  pages.py
app/services/: agent_service.py
scripts/: load_fixtures.py
static/css/: auth.css  style.css
static/js/: auth.js  chat.js
templates/: about.html  base.html  index.html  login.html  signup.html
