[project]
name = "supervisor-workers-agent"
version = "0.1.0"
description = "FastAPI application with Jinja2 templating support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.10.0",
    "motor>=3.6.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
]
